# manual_linear_regression

./: .gitignore  model.py  pyproject.toml  readme.md  test.ipynb  utils.py
.github/workflows/: ci.yml
notebooks/: car_prediction.ipynb
src/: model.py  test.ipynb  utils.py
src/models/: base.py  lasso_regression.py  mle.py  model_base.py  ols.py  ridge_regression.py  wls.py
src/regression_analysis/: cli.py  test.ipynb  utils.py
src/regression_analysis/data_processing/: preprocessing.py
src/regression_analysis/models/: base.py  discrete_base.py  lasso_regression.py  linear_base.py  logistic_regression.py  mle_regression.py  ols.py  ridge_regression.py  wls.py
src/regression_analysis/utils/: diagnostics.py  diagnostics_handling.py  exceptions.py  helpers.py
tests/: test_model.py  test_utils.py
